# sero-rs

./: Cargo.toml  Dockerfile  build.sh
src/: cli.rs  endpoint_watcher.rs  injector.rs  main.rs  proxy.rs  scaler.rs  svc_info.rs
