[package]
name = "sero"
version = "0.1.0"
authors = ["Lukas Paluch <paluch@atix.de>", "Pascal Fries <fries@atix.de>"]
edition = "2021"
rust-version = "1.67"
description = "Autoscale from zero in Kubernetes by proxying and holding connections."
repository = "https://github.com/FriesPascal/sero-rs/"


[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive", "env"] }
futures = "0.3"
hostname = "0.3"
json-patch = "0.3"
k8s-openapi = { version = "0.17", features = ["v1_26"] }
kube = { version = "0.80", default-features = false, features = ["client", "runtime", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
